2006-02-16  Kasper Skaarhoj  <kasperYYYY@typo3.com>
	* Added new script (tslib/class.tslib_eidtools.php) with tools for "eID scripts". See extension "whiteboard" for an example!

2006-02-15 Karsten Dambekalns <karsten@typo3.org>

	* typo3/mod/tools/em: More fixes and better error checking.
	* typo3/sysext/adodb: Update to upstream version 4.71.
	* t3lib/class.t3lib_tsfebeuserauth: The admin panel uses GET instead of POST now.

2006-02-15  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed an issue with the new GIFBUILDER code and transparentColor TS option. Also fixed some minor bugs with not unlinked temp files.

2006-02-15  Kasper Skaarhoj  <kasperYYYY@typo3.com>

	* Changed usage of showpic.php: Now, the reference to showpic.php from inside tslib_content is done using "index.php?eID=tx_cms_showpic&..."+usual parameters. This is the future supported way of accessing the services of showpic! It also means that other scripts offering FE services bypassing tslib_fe can use same methodology! Applications I can think of: AJAX data, streams (like secure download scripts passing binary data through). This change means that "showpic.php" is not needed as a symlink anymore, neither as a script in the core root!

2006-02-15  Michael Stucki  <michael@typo3.org>

	* Various changes to indexed_search, see local ChangeLog for details
	* Install Tool: Added "cache_imagesizes" to list of tables that can be cleared
	* !!! Indexed Search: Removed all options for indexing OpenOffice.org/OpenDocument files and replaced them with the above "unzip" option. Affected options are: nativeOOMethod, OOoExtract, ruby
	* !!! Indexed Search: Changed all default paths from /usr/local/bin/ to /usr/bin/
	* Removed create_symlink.sh and remove_symlink.sh from CVS because they are not needed anymore. If you still want to use symbolic links for some reason, you can find some good information in the "TYPO3 Installation & Upgrade" manual.

2006-02-15  Rene Fritz  <r.fritz@colorcube.de>
